#191909 code documentation
